--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Personal Bio</title>
+    <style></style>
 </head>
 <body>
     <h1>Personal Portfolio</h1>
