header + nav id ="horizontal" tag added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <style></style>
 </head>
 <body>
+    <header>
+        <nav id="horizontal">
+            
+        </nav>
+    </header>
     <h1>Personal Portfolio</h1>
 </body>
 
