a href="index.html"

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav id="horizontal">
-            
+            <a href="index.html">#</a>
         </nav>
     </header>
     <h1>Personal Portfolio</h1>
