--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <nav id="horizontal">
             <a href="index.html">#</a>
+            <a href="about.html">About Me</a>
         </nav>
     </header>
     <h1>Personal Portfolio</h1>
