--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <nav id="horizontal">
             <a href="index.html">#</a>
             <a href="about.html">About Me</a>
+            <a href="contact.html">Contact</a>
         </nav>
     </header>
     <h1>Personal Portfolio</h1>
