--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <nav id="horizontal">
-            <a href="index.html">#</a>
+            <a href="#">Home</a>
             <a href="about.html">About Me</a>
             <a href="contact.html">Contact</a>
         </nav>
