--- a/about.html
+++ b/about.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>About Me</h1>
+    <header>
+        <nav id="horizontal">
+            <a href="index.html">Home</a>
+            <a href="#">About Me</a>
+            <a href="contact.html">Contact</a>
+        </nav>
 </body>
 
 
