--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1>Contact</h1>
+    <header>
+        <nav id="horizontal">
+            <a href="index.html">Home</a>
+            <a href="about.html">About Me</a>
+            <a href="#">Contact</a>
+        </nav>
 </body>
 
 
