--- a/about.html
+++ b/about.html
@@ -8,13 +8,13 @@
     <style></style>
 </head>
 <body>
-    <h1>About Me</h1>
     <header>
-        <nav id="horizontal">
-            <a href="index.html">Home</a>
-            <a href="#">About Me</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+        <a href="index.html">Home</a>
+        <a href="#">About Me</a>
+        <a href="contact.html">Contact</a>
+    </header>
+    <h1>About Me</h1>
+
 </body>
 
 
