--- a/contact.html
+++ b/contact.html
@@ -8,13 +8,15 @@
     <style></style>
 </head>
 <body>
-    <h1>Contact</h1>
     <header>
         <nav id="horizontal">
             <a href="index.html">Home</a>
             <a href="about.html">About Me</a>
             <a href="#">Contact</a>
         </nav>
+    </header>
+    <h1>Contact</h1>
+
 </body>
 
 
