nav id="horizontal" amended

--- a/about.html
+++ b/about.html
@@ -9,9 +9,11 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Home</a>
-        <a href="#">About Me</a>
-        <a href="contact.html">Contact</a>
+        <nav id="horizontal">
+            <a href="index.html">Home</a>
+            <a href="#">About Me</a>
+            <a href="contact.html">Contact</a>
+        </nav>
     </header>
     <h1>About Me</h1>
 
