nav bar changed to <ul> and nested <li> tags

--- a/about.html
+++ b/about.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <nav id="horizontal">
-            <a href="index.html">Home</a>
-            <a href="#">About Me</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </header>
     <h1>About Me</h1>
 
