--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <nav id="horizontal">
-            <a href="index.html">Home</a>
-            <a href="about.html">About Me</a>
-            <a href="#">Contact</a>
-        </nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
     </header>
     <h1>Contact</h1>
 
