--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header>
-        <nav id="horizontal">
-            <a href="#">Home</a>
-            <a href="about.html">About Me</a>
-            <a href="contact.html">Contact</a>
-        </nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
     </header>
     <h1>Personal Portfolio</h1>
 </body>
