<div id="wrapper"> Added to body

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <style></style>
 </head>
 <body>
+    <div id="wrapper">
     <header>
         <ul>
             <li><a href="#">Home</a></li>
@@ -16,6 +17,9 @@
         </ul>
     </header>
     <h1>Personal Portfolio</h1>
+
+
+</div>
 </body>
 
 
