index.html notes added for ease of use

--- a/index.html
+++ b/index.html
@@ -1,21 +1,34 @@
 <!DOCTYPE html>
+<!-- language for site is english --> 
 <html lang="en">
+<!-- head section -->
 <head>
+    <!-- character size spec utf-8 -->
     <meta charset="utf-8">
+    <!-- fit to multiple screen devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- links css stylesheet -->
     <link rel="stylesheet" href="../Pro_1/CSS/styles.css">
+    <!-- Title URL bar -->
     <title>Personal Bio</title>
+    <!-- internal style section -->
     <style></style>
 </head>
+<!-- body section -->
 <body>
+    <!-- div #wrapper for whole page content -->
     <div id="wrapper">
+    <!-- header section containing nav bar -->
     <header>
+        <!-- main list section -->
         <ul>
+            <!-- internal link section containing links for nav bar -->
             <li><a href="#">Home</a></li>
             <li><a href="about.html">About Me</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </header>
+    <!-- main title of web page-->
     <h1>Personal Portfolio</h1>
 
 
