new change within code to align nav bar horizontally

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 <body>
     <!-- div #wrapper for whole page content -->
     <div id="wrapper">
-    <!-- header section containing nav bar -->
-    <header>
+        <div id="nav">
         <!-- main list section -->
-        <ul>
+            <ul>
             <!-- internal link section containing links for nav bar -->
-            <li><a href="#">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </header>
-    <!-- main title of web page-->
+                <li><a href="#">Home</a></li>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    <!-- header section containing Title within web page -->
+    <header>
     <h1>Personal Portfolio</h1>
-
+    </header>
 
 </div>
 </body>
